--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,23 @@
-name: CI
+name: Java CI with Maven
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
-  
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: check
-        uses: actions/checkout@v2
-      - name: Setup JDK
-        uses: actions/setup-java@v2
-        with:
-          java-version: '21'
-          distribution: 'adopt'
-
-      - name: action&maven
-        run: mvn -B package --file pom.xml
+    - uses: actions/checkout@v2
+    - name: Set up JDK 21
+      uses: actions/setup-java@v2
+      with:
+        java-version: '21'
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    - name: Run Tests with Maven
+      run: mvn test --file pom.xml
